Add disabled style for buttons.

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -161,6 +161,10 @@ body {
   background-color: rgba(0, 0, 0, 0);
 }
 
+.toolbarButton[disabled] {
+  opacity: .5;
+}
+
 .splitToolbarButton:hover > .toolbarButton,
 .splitToolbarButton.toggled > .toolbarButton {
   background-color: hsla(0,0%,0%,.12);
