--- a/web/viewer.css
+++ b/web/viewer.css
@@ -404,6 +404,7 @@ body {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  margin-top: 5px;
 }
 
 .toolbarButton.bookmark::before {
