Fixing display: none; title for zoom

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -176,7 +176,10 @@ body {
 }
 
 .toolbarButton > span {
-  display: none;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  overflow: hidden;
 }
 
 .toolbarButton[disabled] {
