Hide page label and zoom selector

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -985,3 +985,10 @@ canvas {
     display: none;
   }
 }
+
+@media all and (max-width: 500px) {
+  #scaleSelectContainer, #pageNumberLabel {
+    display: none;
+  }
+}
+
