[Editor] Use a round color swatch for the basic color picker

--- a/web/annotation_editor_layer_builder.css
+++ b/web/annotation_editor_layer_builder.css
@@ -1059,6 +1059,16 @@
 
 .basicColorPicker {
   width: 28px;
+
+  &::-moz-color-swatch {
+    border-radius: 100%;
+  }
+
+  /*#if !MOZCENTRAL*/
+  &::-webkit-color-swatch {
+    border-radius: 100%;
+  }
+  /*#endif*/
 }
 
 .annotationEditorLayer {
