--- a/web/comment_manager.css
+++ b/web/comment_manager.css
@@ -166,7 +166,7 @@
           0 0 15px 0 rgb(0 0 0 / 0.25);
 
         button {
-          background-color: var(--menu-bg-color);
+          background-color: var(--menuitem-bg-color);
           width: 100%;
           height: 24px;
           padding: 0;
@@ -247,42 +247,6 @@
         );
         opacity: 1;
       }
-    }
-  }
-}
-
-.annotationLayer {
-  --comment-inline-button-bg: #e0e0e6;
-  --comment-inline-button-fg: black;
-  --comment-inline-button-border-color: #8f8f9d;
-  --comment-button-dim: 24px;
-  --comment-button-offset: calc(var(--comment-button-dim) / 2);
-
-  .annotationCommentButton {
-    position: absolute;
-    width: var(--comment-button-dim);
-    height: var(--comment-button-dim);
-    background-color: var(--comment-inline-button-bg);
-    cursor: auto;
-    z-index: 1;
-    border: 1px solid var(--comment-inline-button-border-color);
-    border-radius: 4px;
-    padding: 2px;
-    margin: 0;
-    box-sizing: border-box;
-    pointer-events: auto;
-
-    &::before {
-      content: "";
-      display: inline-block;
-      width: 100%;
-      height: 100%;
-      mask-repeat: no-repeat;
-      mask-size: cover;
-      mask-image: var(--comment-edit-image);
-      background-color: var(--comment-inline-button-fg);
-      margin: 0;
-      padding: 0;
     }
   }
 }
