added filter toggle button
- new `string-template` and `renderStringPref` (regex pattern matching) in chromium extension options
- new `cssInvertPage`, `cssInvertThumb`, and `cssInvertFilter` settings (with defaults; off by default)
  - available filters: `brightness()`, `contrast()`, `grayscale()`, `invert()`, `sepia()`, `saturate()`, and `hue-rotate()` via regex (valid CSS syntax)
- translations for `en-US`, `en-GB`, `en-CA`, and `de`
- filter influences PDF view container and PDF thmbnail container (thus also custom text/drawings/highlights)
- new svg as icon (modified `toolbarButton-editorStamp.svg`)
- button toggle is added next to zoom/scale controls in the middle of the toolbar

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -111,6 +111,7 @@
   --toolbarButton-pageDown-icon: url(images/toolbarButton-pageDown.svg);
   --toolbarButton-zoomOut-icon: url(images/toolbarButton-zoomOut.svg);
   --toolbarButton-zoomIn-icon: url(images/toolbarButton-zoomIn.svg);
+  --toolbarButton-invert-icon: url(images/toolbarButton-invert.svg);
   --toolbarButton-presentationMode-icon: url(images/toolbarButton-presentationMode.svg);
   --toolbarButton-print-icon: url(images/toolbarButton-print.svg);
   /*#if GENERIC*/
@@ -538,6 +539,10 @@ body {
 
 #zoomInButton::before {
   mask-image: var(--toolbarButton-zoomIn-icon);
+}
+
+#invertButton::before {
+  mask-image: var(--toolbarButton-invert-icon);
 }
 
 #editorFreeTextButton::before {
