add redo/undo buttons.

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -111,6 +111,8 @@
   --toolbarButton-pageDown-icon: url(images/toolbarButton-pageDown.svg);
   --toolbarButton-zoomOut-icon: url(images/toolbarButton-zoomOut.svg);
   --toolbarButton-zoomIn-icon: url(images/toolbarButton-zoomIn.svg);
+  --toolbarButton-redo-icon: url(images/toolbarButton-redo.svg);
+  --toolbarButton-undo-icon: url(images/toolbarButton-undo.svg);
   --toolbarButton-presentationMode-icon: url(images/toolbarButton-presentationMode.svg);
   --toolbarButton-print-icon: url(images/toolbarButton-print.svg);
   /*#if GENERIC*/
@@ -538,6 +540,14 @@ body {
 
 #zoomInButton::before {
   mask-image: var(--toolbarButton-zoomIn-icon);
+}
+
+#redoButton::before {
+  mask-image: var(--toolbarButton-redo-icon);
+}
+
+#undoButton::before {
+  mask-image: var(--toolbarButton-undo-icon);
 }
 
 #editorFreeTextButton::before {
