Make sure that a good constrast ratio is respected when darkening/lightening a color

--- a/web/comment_manager.css
+++ b/web/comment_manager.css
@@ -358,7 +358,7 @@
   }
 }
 
-#editorCommentsSidebar {
+.comment.sidebar {
   --comment-close-button-icon: url(images/comment-closeButton.svg);
 
   --comment-date-fg-color: light-dark(
